# rust-crates

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
crates/ba2r/: Cargo.toml
crates/ba2r/src/: dds.rs  error.rs  hashing.rs  lib.rs  read.rs  write.rs
crates/ba2r/src/write/: dx10.rs  gnrl.rs  mod.rs
crates/bsa/: Cargo.toml
crates/bsa/src/: lib.rs
crates/btdx/: Cargo.toml  LICENSE-MIT  README.md
crates/btdx/src/: dds.rs  error.rs  lib.rs  read.rs
crates/btdx/src/write/: dx10.rs  gnrl.rs  mod.rs
crates/btdx/tests/: golden.rs  reader.rs  roundtrip.proptest-regressions  roundtrip.rs
crates/btdx/tests/common/: mod.rs
crates/esl-writer/: Cargo.toml  README.md
crates/esl-writer/src/: error.rs  game.rs  lib.rs  plugin.rs  record.rs  win1252.rs  write.rs
crates/esl-writer/tests/: errors.rs  plugin.rs  records.rs  roundtrip.rs
crates/esl-writer/tests/common/: mod.rs
crates/vcdiff/: Cargo.toml  README.md
crates/vcdiff/examples/: decode_file.rs
crates/vcdiff/scripts/: benchmark.ps1  measure_stress.ps1
crates/vcdiff/src/: cache.rs  code_table.rs  cursor.rs  decoder.rs  djw.rs  error.rs  input.rs  lib.rs  options.rs  secondary.rs  target.rs
crates/vcdiff/tests/: decode.rs  id1.rs  id2.rs  overseer_corpus.rs  streaming.rs  stress_over_2gib.rs  xdelta_matrix.rs
crates/vcdiff/tests/common/: mod.rs
crates/vcdiff/tests/fixtures/: overseer-corpus.example.toml
crates/vcdiff/tests/fixtures/xdelta/: .gitattributes  README.md  djw-anchors.txt  generate.py  xdelta-3.1.0-lzma.vcdiff  xdelta-3.1.0-none.vcdiff  xdelta-3.2.0-default.vcdiff  xdelta-3.2.0-djw.vcdiff  xdelta-3.2.0-djw9.vcdiff
crates/vcdiff/tests/fixtures/xdelta/printhdrs/: xdelta-3.1.0-none.txt  xdelta-3.2.0-default.txt  xdelta-3.2.0-djw.txt  xdelta-3.2.0-djw9.txt  xdelta-3.2.0-lzma.txt
crates/vcdiff/tests/fixtures/xdelta/producers/: xdelta-3.1.0-config.txt  xdelta-3.1.0-version.txt  xdelta-3.2.0-config.txt  xdelta-3.2.0-version.txt
esl-writer/: Cargo.toml
