[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["muteptr"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/northaxosky/rust-crates"

[workspace.dependencies]
thiserror = "2"
flate2 = "1"
proptest = "1"

[profile.release]
opt-level = 2
