[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["muteptr"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/northaxosky/rust-crates"

[workspace.dependencies]
thiserror = "2"
flate2 = "1"
proptest = "1"
sha2 = "0.10"
blake3 = "1"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.8"
lz4_flex = { version = "0.11", default-features = false, features = [
    "std",
    "safe-decode",
    "safe-encode",
] }

[profile.release]
opt-level = 2
