[package]
name = "btdx"
version = "0.3.0"
description = "Pure-Rust reader and writer for Fallout 4 and Starfield Bethesda archives (BA2 / BTDX)"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ba2", "btdx", "fallout", "bethesda", "archive"]
categories = ["game-development", "parser-implementations"]

[dependencies]
thiserror.workspace = true
flate2.workspace = true
lz4_flex.workspace = true

[dev-dependencies]
proptest.workspace = true
