[package]
name = "vcdiff-rs"
version = "0.1.0"
description = "Pure-Rust VCDIFF (RFC 3284) decoder for xdelta3-style binary deltas"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["vcdiff", "xdelta", "delta", "rfc3284", "diff"]
categories = ["compression", "encoding"]
publish = false

[dependencies]
thiserror.workspace = true
xz4rust = { git = "https://github.com/northaxosky/xz4rust", rev = "7625e9fea5422772f606887cae5cb821c931102a", default-features = false, features = ["alloc", "no_unsafe"] }

[dev-dependencies]
blake3.workspace = true
crc32fast.workspace = true
proptest.workspace = true
serde.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
